Added plan for tech demo

--- a/capstone.html
+++ b/capstone.html
@@ -32,6 +32,6 @@
     <p>I've created a GitHub repository to store the code. All assessments of the models will be stored in Jupyter notebooks.</p>
     <p><a href="https://www.github.com/danvaccaro/attack_detection">GitHub Repository</a></p>
     <p>I've built a BoW model using a count vectorizer and logistic regression model, based on the phishing email dataset that was preprocessed by Alnemari et al. I must say I'm a bit disappointed - this base model already has 98.8% accuracy based on cross-validation reports. I was hoping for a more challenging problem. From here, I could either try different algorithms to improve performance further, or I could look at the initial datasets before they were processed, which are available, and perform my own processing. I think I'll take the latter approach for my own educational purposes.</p>
-    <p>Next steps will be to look at the raw datasets and perform my own processing, before building a more complex model.</p>
+    <p>Next steps will be to look at the raw datasets and perform my own processing, before building a more complex model. The tech demo for next week will probably just read in some spam, apply the model, and give a classification.</p>
 </body>
 </html>
