--- a/capstone.html
+++ b/capstone.html
@@ -42,5 +42,7 @@
     <p>Due to a family emergency, I wasn't able to put in much work this week. However, I have decided I will be evolving this project to be more of a platform for community-aggregated phishing data. While similar ideas exist such as PhishTank, those are focused on urls.
     <p>My idea is to have a platform where users can submit emails they suspect are phishing, and the community can vote on whether they are or not. This will be a good way to generate more data for the model, and also to provide a service to the community. From this data, we will periodically train models and offer them to users. The platform will be integrated with a thunderbird extension for simplified reporting and filtering. More details to come.</p>
     </p>
+    <h2>Week 7: 7/12/2024</h2>
+    <p>I've put together high level architecture diagrams for the platform, web-app, and extension. Schemas have been designed to store users, votes, and emails. Focus is now on the design document.</p>
 </body>
 </html>
